; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ahci/extr_ahciem.c_ahci_em_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ahci/extr_ahciem.c_ahci_em_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahci_enclosure = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ahci_em_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ahci_em_suspend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ahci_enclosure*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.ahci_enclosure* @device_get_softc(i32 %4)
  store %struct.ahci_enclosure* %5, %struct.ahci_enclosure** %3, align 8
  %6 = load %struct.ahci_enclosure*, %struct.ahci_enclosure** %3, align 8
  %7 = getelementptr inbounds %struct.ahci_enclosure, %struct.ahci_enclosure* %6, i32 0, i32 0
  %8 = call i32 @mtx_lock(i32* %7)
  %9 = load %struct.ahci_enclosure*, %struct.ahci_enclosure** %3, align 8
  %10 = getelementptr inbounds %struct.ahci_enclosure, %struct.ahci_enclosure* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @xpt_freeze_simq(i32 %11, i32 1)
  %13 = load %struct.ahci_enclosure*, %struct.ahci_enclosure** %3, align 8
  %14 = getelementptr inbounds %struct.ahci_enclosure, %struct.ahci_enclosure* %13, i32 0, i32 0
  %15 = call i32 @mtx_unlock(i32* %14)
  ret i32 0
}

declare dso_local %struct.ahci_enclosure* @device_get_softc(i32) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @xpt_freeze_simq(i32, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
